[package]
name = "did_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
identity_iota = "0.6"
thiserror = "1"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
